@@ -8,8 +8,12 @@
 		<languageKey index="default" type="array">
 			<label index="tx_dam.tx_jhedamextender_usage">Usage for</label>
 			<label index="tx_jhedamextender_usage">Media usage</label>
-                        <label index="tx_dam.tx_jhedamextender_path">Path</label>
-                        <label index="tx_dam.tx_jhedamextender_order">Order</label>
+			<label index="tx_dam.tx_jhedamextender_path">Path</label>
+			<label index="tx_dam.tx_jhedamextender_lowlevel_selection.I.1">Customer</label>
+			<label index="tx_dam.tx_jhedamextender_lowlevel_selection.I.2">Distribution</label>
+			<label index="tx_dam.tx_jhedamextender_lowlevel_selection.I.3">Distribution and Centre</label>
+			<label index="tx_dam.tx_jhedamextender_lowlevel_selection">Document type</label>
+			<label index="tx_dam.tx_jhedamextender_order">Order</label>
 			<label index="tx_jhedamextender_usage.usage_ea619ffddc">Usage</label>
 			<label index="tt_content.list_type_pi1">DAM special usage</label>
 			<label index="tt_content.list_type_pi2">DAM category menue</label>
@@ -19,8 +23,12 @@
 		<languageKey index="de" type="array">
 			<label index="tx_dam.tx_jhedamextender_usage">Verwendung für</label>
 			<label index="tx_jhedamextender_usage">Medienverwendung</label>
-                        <label index="tx_dam.tx_jhedamextender_path">Pfad</label>
-                        <label index="tx_dam.tx_jhedamextender_order">Sortierung</label>
+			<label index="tx_dam.tx_jhedamextender_path">Pfad</label>
+			<label index="tx_dam.tx_jhedamextender_lowlevel_selection.I.1">Kunde</label>
+			<label index="tx_dam.tx_jhedamextender_lowlevel_selection.I.2">Vertrieb</label>
+			<label index="tx_dam.tx_jhedamextender_lowlevel_selection.I.3">Vertrieb und Zentrum</label>
+			<label index="tx_dam.tx_jhedamextender_lowlevel_selection">Dokumententyp</label>
+			<label index="tx_dam.tx_jhedamextender_order">Sortierung</label>
 			<label index="tx_jhedamextender_usage.usage_ea619ffddc">Verwendung</label>
 			<label index="tt_content.list_type_pi1">DAM spezielle Verwendung</label>
 			<label index="tt_content.list_type_pi2">DAM Kategoriemenü</label>
